# ML-Village-Backend

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml
lambdaworks_stark_platinum/src/: lib.rs  main.rs
lambdaworks_stark_platinum/src/verifier/: mod.rs
node/: index.ts  package-lock.json  package.json  tsconfig.json
node/src/controllers/: onnx.controller.ts
node/src/routes/: onnx.route.ts
prover_verifier_backend/: .env.example  Cargo.toml  README.md  prover_backend_db
prover_verifier_backend/src/: background_utils.rs  main.rs  setup_db.rs  test.rs  testing.rs
prover_verifier_backend/src/cairo_utils/: mod.rs
prover_verifier_backend/src/giza_utils/: mod.rs
prover_verifier_backend/src/service/: mod.rs
tic_tac_toe_orion/: Scarb.toml
tic_tac_toe_orion/src/: inference.cairo  test.cairo
verifier_cli/: Cargo.toml
verifier_cli/src/: main.rs
