[package]
name = "prover_verifier_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
lambdaworks-stark = { path = "../lambdaworks_stark_platinum" }

# external
rocket = { version = "=0.5.0-rc.4", features = ["secrets", "tls", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = " 1.5.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
