[package]
name = "prover_verifier_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
lambdaworks-stark = { path = "../lambdaworks_stark_platinum" }

# external
rocket = { version = "=0.5.0-rc.4", features = ["secrets", "tls", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = " 1.5.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
] }
dotenvy = "0.15.7"
rocket_db_pools = { version = "=0.1.0-rc.4", features = [
    "sqlx_sqlite",
] }
tokio = { version = "1", features = ["full"] }


[default.databases.prover_backend_db]
url = "prover_backend_db"

[[bin]]
name = "setup_db"
path = "src/setup_db.rs"
