[package]
name = "prover_verifier_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
lambdaworks-stark = { path = "../lambdaworks_stark_platinum" }


# external
rocket = { version = "=0.5.0-rc.4", features = ["secrets", "tls", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = " 1.5.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
] }
dotenvy = "0.15.7"
rocket_db_pools = { version = "=0.1.0-rc.4", features = ["sqlx_sqlite"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
const-hex = "1.10.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet-core/v0.7.2" }
regex = "1.10.2"

[[bin]]
name = "setup_db"
path = "src/setup_db.rs"


[[bin]]
name = "server"
path = "src/main.rs"


[[bin]]
name = "testing"
path = "src/testing.rs"
