[package]
name = "verifier_cli"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["cargo"] }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "a17b951" }
lambdaworks-stark = { path = "../lambdaworks_stark_platinum" }
